# crm

./: .gitignore  Docker-compose.yml  LICENSE  alembic.ini  cfg.py  pyproject.toml
asterisk/: Dockerfile
jobs/: Dockerfile  covid.py  main.py  phonebook.py  sql.py  tasks.py  weather.py
src/api/: Dockerfile  main.py
src/api/routes/: base.py  security.py
src/api/schemas/: covid.py  weather.py
src/asterisk/: Dockerfile  ami.py
src/bot/: Dockerfile  handlers.py  main.py  telegram.py
src/database/: abstraction.py  curl.py  models.py  service.py  sql.py
src/jobs/: Dockerfile  covid.py  curl.py  main.py  phonebook.py  tasks.py  weather.py
src/service/: api.py  bot.py  covid.py  phonebook.py  service.py  tasks.py  weather.py
src/test/: Dockerfile  tst.py
tasks/: Dockerfile  main.py  purchase.py  sql.py
