[tool.poetry]
name = "mto"
version = "0.1.0"
description = ""
authors = ["Divider <it-cio@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pandas = "^1.4.4"
python-docx = "^0.8.11"
XlsxWriter = "^3.0.3"
python-dotenv = "^0.21.0"
aioschedule = "^0.5.2"
aspose-words = "^22.9.0"
SQLAlchemy = "^1.4.41"
PyMySQL = "^1.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
